--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 .logo {
   height: 6em;
   padding: 1.5em;
-  will-change: filter;
+  will-change: filter;//
   transition: filter 300ms;
 }
 .logo:hover {
